# fastapi_alembic_demo

./: .__atomic-writebae86b96  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  alembic.ini  app.db  bazel-bin  bazel-fastapi_alembic_demo  bazel-out  bazel-testlogs  category  main.py  requirements.txt  requirements_lock_3_12.txt  run_uvicorn.sh  start.py
alembic/: env.py
alembic/versions/: 405f39ba329d_add_category_orm_02.py  5abcaa72ba77_add_age3.py  5eb3ac4e9538_init.py  9a7ebc08356d_add_age3.py  a44f83d3465f_add_category_orm_03.py  aab566bde0dc_add_username_in_user.py  c91c8a6d6606_add_age3.py  cabe48b69349_add_category_orm_01.py  cff364e6e5d0_remove_name_in_user.py  ef56e4e63389_add_category_orm_05.py  f38e46a592f2_add_category_orm_04.py
app/: app.py  auth.py  cron.py  db.py  main.py  models.py
app/routes/: __init__.py  about.py  admin.py  cron.py  file.py  user.py  webstocket.py
client/: multi_client.py  web_stocket.py
tests/: python_basic_test.py  test_websocket.py
tools/: alembic_runner.py
