load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.txt",
    requirements_txt = "requirements_lock_3_12.txt",
)

py_library(
    name = "app_lib",
    srcs = glob(["app/**/*.py"]),
    imports = ["."],
    deps = [
        "@py_deps//aiofiles",  # pip deps
        "@py_deps//aiosqlite",  # pip deps
        "@py_deps//alembic",  # pip deps
        "@py_deps//apscheduler",  # pip deps
        "@py_deps//fastapi",  # pip deps
        "@py_deps//fastapi_users",  # pip deps
        "@py_deps//passlib",  # pip deps
        "@py_deps//pyjwt",  # pip deps
        "@py_deps//sqlalchemy",  # pip deps
        "@py_deps//sqlmodel",  # pip deps
        "@py_deps//uvicorn",  # pip deps
    ],
)

py_binary(
    name = "app_server",
    srcs = ["main.py"],
    args = [
    ],
    data = [],
    imports = ["."],
    main = "main.py",
    deps = [
        ":app_lib",
        "@py_deps//anyio",
        "@py_deps//uvicorn",
    ],

)


py_test(
    name = "python_basic_test",
    srcs = ["tests/python_basic_test.py"],
    main = "tests/python_basic_test.py",
    deps = [":app_lib"],
)

py_binary(
    name = "py_webstocket",
    srcs = ["client/web_stocket.py"],
    main = "client/web_stocket.py",
     deps = [
        ":app_lib",
         "@py_deps//websockets",
         "@py_deps//anyio",

        ],
)

py_test(
    name = "py_test_websocket",
    srcs = ["tests/test_websocket.py"],
    main = "tests/test_websocket.py",

    deps = [
        ":app_lib",  # 包含 server.py
        "@py_deps//anyio",
        "@py_deps//fastapi",
        "@py_deps//pytest",
        "@py_deps//httpx",
    ],
)

py_binary(
    name = "migrate",
    srcs = ["tools/alembic_runner.py"],
    data = [
        "alembic",
        "alembic.ini",
    ],  # ✅ 确保配置文件和迁移脚本目录被打包
    main = "tools/alembic_runner.py",
    deps = [
        ":app_lib",
        "@py_deps//alembic",
        "@py_deps//fastapi_users",  # pip deps
        "@py_deps//sqlmodel",
    ],
)
