module(
   name = "fastapi_sqlalchemy_demo",
   version = "0.1.0",
)


# File: MODULE.bazel
bazel_dep(name = "rules_python", version = "1.5.4")


PYTHON_VERSION = "3.12"

# Configure Python toolchain
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    #    name = "pip_deps",
    hub_name = "py_deps",
    #    overrides = {
    #        "fastapi": {
    #            "build_file": "//third_party:fastapi.BUILD",
    #        },
    #    },
    python_version = PYTHON_VERSION,
    requirements_lock = "//:requirements_lock_3_12.txt",
)
use_repo(pip, "py_deps")

